--- a/css/main.scss
+++ b/css/main.scss
@@ -19,8 +19,8 @@ $spacing-unit:                    30px;
 // Base styles 
 
 body { 
-  padding-top:    $spacing-unit;
-  padding-bottom: $spacing-unit;
+  padding-top:    $spacing-unit / 2;
+  padding-bottom: $spacing-unit / 2;
   font-family:    $base-font-family;
   line-height:    $base-line-height;
 }
