--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,9 @@ h1 {
     color:        #0096ff;
     text-decoration: none;
     }
+  small {
+    font-size:    $base-font-size;
+    }
 }
 
 h2 {
