--- a/css/main.scss
+++ b/css/main.scss
@@ -67,6 +67,17 @@ h4 {
     width: 240px;
 }
 
+.icon {
+    width: 14px;
+    margin-right: 3px;
+    vertical-align: baseline;
+}
+
+.poo {
+    width: 60px;
+    vertical-align: baseline;
+}
+
 
 // Social
 
