--- a/css/main.scss
+++ b/css/main.scss
@@ -126,10 +126,11 @@ a:hover {
         color: #FFFFFF
     }
     h3 {
-        padding-top: $spacing-unit / 3;
+        padding-top: $spacing-unit / 2;
         padding-bottom: $spacing-unit / 5;
         border-bottom:  3px solid #FFF;
         margin-bottom: $spacing-unit / 3;
+        margin-top: 0px;
         position: -webkit-sticky;
         position: sticky;
         top: 0px;
@@ -137,7 +138,6 @@ a:hover {
     p:first-of-type { 
         padding-top: $spacing-unit / 3;
     }
-  padding-top: $spacing-unit / 5;
   padding-bottom: $spacing-unit / 3;
 }
 
