581, upgrade and add history

--- a/css/main.scss
+++ b/css/main.scss
@@ -162,6 +162,12 @@ a:hover {
 
 .c-block-19 { background-color: #808080; }
 
+.history {
+    h4 {
+        margin-top: $spacing-unit;
+    }
+}
+
 .splash {
   margin-top: $spacing-unit / 2;
   margin-bottom: $spacing-unit * 2/3;
