--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <title>{{ site.title }}</title>
+  <title>{{ site.title }}{% if page.title %} &raquo; {{ page.title }}{% endif %}</title>
   <meta name="description" content="{{ site.description }}">
   
   {% include social-graph-tags.html %}
