--- a/_includes/social-graph-tags.html
+++ b/_includes/social-graph-tags.html
@@ -4,7 +4,7 @@
 <meta name="twitter:creator" content="{{ site.twitter | prepend: '@' }}" />
 
 <!-- Open Graph data -->    
-<meta property="og:title" content="{{ site.title }}" />
+<meta property="og:title" content="{{ site.title }}{% if page.title %} &raquo; {{ page.title }}{% endif %}" />
 <meta property="og:description" content="{{ site.description }}" />        
 <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}" />    
 <meta property="og:image" content="{{ site.url | append: '/images/image.png' }}" /> 
