--- a/_includes/social-graph-tags.html
+++ b/_includes/social-graph-tags.html
@@ -5,7 +5,7 @@
 
 <!-- Open Graph data -->    
 <meta property="og:title" content="{{ site.title }}{% if page.title %} &raquo; {{ page.title }}{% endif %}" />
-<meta property="og:description" content="{{ site.description }}" />        
+<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />        
 <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}" />    
 <meta property="og:image" content="{{ site.url | append: '/images/image.png' }}" /> 
 <meta property="og:site_name" content="{{ site.title }}" />       
