--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,4 @@
 {% assign latest_date = items[0].date | date: "%B %Y" %}
 
 <p class="text-muted"><small>Contact: <a href="mailto:hello@deepindex.org">hello@deepindex.org</a><br />
-Curated by <a href="https://twitter.com/clry2">@clry2</a> and last updated {{ latest_date }} (<a href="/history/">view history</a>)</small></p>
+Curated by <a href="https://twitter.com/clry2">@clry2</a> and last updated {{ latest_date }} (<a href="/history/">history</a>)</small></p>
