--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 {% assign items = site.data.links | sort: "date" | reverse %} 
 {% assign latest_date = items[0].date | date: "%B %Y" %}
 
-<p class="text-muted"><small>Contact: <a href="mailto:hello@deepindex.org">hello@deepindex.org</a><br />
+<p class="text-muted"><small>Twitter: <a href="https://twitter.com/deepindex">@deepindex</a><br />
+Contact: <a href="mailto:hello@deepindex.org">hello@deepindex.org</a><br />
 Curated by <a href="https://twitter.com/clry2">@clry2</a> and last updated {{ latest_date }} (<a href="/history/">history</a>)</small></p>
